prometheus/grafana/grafana-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: grafana
  namespace: monitoring
spec:
  serviceName: "grafana"
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      nodeName: 192.168.189.1
      containers:
      - name: grafana
        image: grafana/grafana
        ports:
          - containerPort: 3000
            protocol: TCP
        resources:
          limits:
            cpu: 500m
            memory: 500Mi
          requests:
            cpu: 500m
            memory: 500Mi
        volumeMounts:
          - name: grafana-data
            mountPath: /var/lib/grafana
            subPath: grafana
          - name: grafana-dashboards
            mountPath: /etc/grafana/provisioning/dashboards
          - name: grafana-datasources
            mountPath: /etc/grafana/provisioning/datasources
          - mountPath: /var/lib/grafana/dashboards
            name: grafana-dashboard-apiserver
            readOnly: false
          - mountPath: /var/lib/grafana/dashboards/cluster-total
            name: grafana-dashboard-cluster-total
            readOnly: false
          - mountPath: /var/lib/grafana/dashboards/controller-manager
            name: grafana-dashboard-controller-manager
            readOnly: false
          - mountPath: /var/lib/grafana/dashboards/k8s-resources-cluster
            name: grafana-dashboard-k8s-resources-cluster
            readOnly: false
          - mountPath: /var/lib/grafana/dashboards/k8s-resources-namespace
            name: grafana-dashboard-k8s-resources-namespace
            readOnly: false
          - mountPath: /var/lib/grafana/dashboards/k8s-resources-node
            name: grafana-dashboard-k8s-resources-node
            readOnly: false
          - mountPath: /var/lib/grafana/dashboards/k8s-resources-pod
            name: grafana-dashboard-k8s-resources-pod
            readOnly: false
          - mountPath: /var/lib/grafana/dashboards/k8s-resources-workload
            name: grafana-dashboard-k8s-resources-workload
            readOnly: false
          - mountPath: /var/lib/grafana/dashboards/k8s-resources-workloads-namespace
            name: grafana-dashboard-k8s-resources-workloads-namespace
            readOnly: false
          - mountPath: /var/lib/grafana/dashboards/kubelet
            name: grafana-dashboard-kubelet
            readOnly: false
          - mountPath: /var/lib/grafana/dashboards/namespace-by-pod
            name: grafana-dashboard-namespace-by-pod
            readOnly: false
          - mountPath: /var/lib/grafana/dashboards/namespace-by-workload
            name: grafana-dashboard-namespace-by-workload
            readOnly: false
          - mountPath: /var/lib/grafana/dashboards/node-cluster-rsrc-use
            name: grafana-dashboard-node-cluster-rsrc-use
            readOnly: false
          - mountPath: /var/lib/grafana/dashboards/node-rsrc-use
            name: grafana-dashboard-node-rsrc-use
            readOnly: false
          - mountPath: /var/lib/grafana/dashboards/nodes
            name: grafana-dashboard-nodes
            readOnly: false
          - mountPath: /var/lib/grafana/dashboards/persistentvolumesusage
            name: grafana-dashboard-persistentvolumesusage
            readOnly: false
          - mountPath: /var/lib/grafana/dashboards/pod-total
            name: grafana-dashboard-pod-total
            readOnly: false
          - mountPath: /var/lib/grafana/dashboards/pods
            name: grafana-dashboard-pods
            readOnly: false
          - mountPath: /var/lib/grafana/dashboards/prometheus-remote-write
            name: grafana-dashboard-prometheus-remote-write
            readOnly: false
          - mountPath: /var/lib/grafana/dashboards/prometheus
            name: grafana-dashboard-prometheus
            readOnly: false
          - mountPath: /var/lib/grafana/dashboards/proxy
            name: grafana-dashboard-proxy
            readOnly: false
          - mountPath: /var/lib/grafana/dashboards/scheduler
            name: grafana-dashboard-scheduler
            readOnly: false
          - mountPath: /var/lib/grafana/dashboards/statefulset
            name: grafana-dashboard-statefulset
            readOnly: false
          - mountPath: /var/lib/grafana/dashboards/workload-total
            name: grafana-dashboard-workload-total
            readOnly: false

      securityContext:
        fsGroup: 472
        runAsUser: 472
      volumes:
      - name: grafana-dashboards
        configMap:
          name: grafana-dashboards
      - name: grafana-datasources
        secret:
          secretName: grafana-datasources
      - configMap:
          name: grafana-dashboard-apiserver
        name: grafana-dashboard-apiserver

      - configMap:
          name: grafana-dashboard-cluster-total
        name: grafana-dashboard-cluster-total
      - configMap:
          name: grafana-dashboard-controller-manager
        name: grafana-dashboard-controller-manager
      - configMap:
          name: grafana-dashboard-k8s-resources-cluster
        name: grafana-dashboard-k8s-resources-cluster
      - configMap:
          name: grafana-dashboard-k8s-resources-namespace
        name: grafana-dashboard-k8s-resources-namespace
      - configMap:
          name: grafana-dashboard-k8s-resources-node
        name: grafana-dashboard-k8s-resources-node
      - configMap:
          name: grafana-dashboard-k8s-resources-pod
        name: grafana-dashboard-k8s-resources-pod
      - configMap:
          name: grafana-dashboard-k8s-resources-workload
        name: grafana-dashboard-k8s-resources-workload
      - configMap:
          name: grafana-dashboard-k8s-resources-workloads-namespace
        name: grafana-dashboard-k8s-resources-workloads-namespace
      - configMap:
          name: grafana-dashboard-kubelet
        name: grafana-dashboard-kubelet
      - configMap:
          name: grafana-dashboard-namespace-by-pod
        name: grafana-dashboard-namespace-by-pod
      - configMap:
          name: grafana-dashboard-namespace-by-workload
        name: grafana-dashboard-namespace-by-workload
      - configMap:
          name: grafana-dashboard-node-cluster-rsrc-use
        name: grafana-dashboard-node-cluster-rsrc-use
      - configMap:
          name: grafana-dashboard-node-rsrc-use
        name: grafana-dashboard-node-rsrc-use
      - configMap:
          name: grafana-dashboard-nodes
        name: grafana-dashboard-nodes
      - configMap:
          name: grafana-dashboard-persistentvolumesusage
        name: grafana-dashboard-persistentvolumesusage
      - configMap:
          name: grafana-dashboard-pod-total
        name: grafana-dashboard-pod-total
      - configMap:
          name: grafana-dashboard-pods
        name: grafana-dashboard-pods
      - configMap:
          name: grafana-dashboard-prometheus-remote-write
        name: grafana-dashboard-prometheus-remote-write
      - configMap:
          name: grafana-dashboard-prometheus
        name: grafana-dashboard-prometheus
      - configMap:
          name: grafana-dashboard-proxy
        name: grafana-dashboard-proxy
      - configMap:
          name: grafana-dashboard-scheduler
        name: grafana-dashboard-scheduler
      - configMap:
          name: grafana-dashboard-statefulset
        name: grafana-dashboard-statefulset
      - configMap:
          name: grafana-dashboard-workload-total
        name: grafana-dashboard-workload-total


  volumeClaimTemplates:
  - metadata:
      name: grafana-data
    spec:
      storageClassName: rbd
      accessModes:
        - ReadWriteOnce
      resources:
        requests:
          storage: "1Gi"
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: grafana
  name: grafana
  namespace: monitoring
spec:
  ports:
  - name: http
    port: 3000
    targetPort: 3000
  selector:
    app: grafana


---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/whitelist-source-range: 150.223.254.0/24, 182.42.255.0/25, 36.111.140.26, 121.8.254.210
  name: grafana-ingress
  namespace: monitoring
spec:
  rules:
  - host: fj-fuzhou-1-grafana.outsight.ecf.plus
    http:
      paths:
      - backend:
          serviceName: grafana
          servicePort: 3000
